// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AboutMe > injects responsive CSS into the LinkedIn badge iframe 1`] = `
<DocumentFragment>
  <div
    class="_wrapper_921ed1"
  >
    <div
      class="_container_57bb28"
      style="font-size: 1.5rem;"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-user _icon_57bb28 fa-lg"
        data-icon="user"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M224 248a120 120 0 1 0 0-240 120 120 0 1 0 0 240zm-29.7 56C95.8 304 16 383.8 16 482.3 16 498.7 29.3 512 45.7 512l356.6 0c16.4 0 29.7-13.3 29.7-29.7 0-98.5-79.8-178.3-178.3-178.3l-59.4 0z"
          fill="currentColor"
        />
      </svg>
      <h1
        class="_header_57bb28 _level1_57bb28"
      >
        About
        <span
          class="_strong_57bb28"
        >
           Me
        </span>
      </h1>
    </div>
    <div
      class="_container_921ed1"
    >
      <div
        class="_container_57bb28"
        style="font-size: 18px;"
      >
        <h2
          class="_header_57bb28 _level2_57bb28"
        >
          Hey! Nice to meet you, I'm Jean Luis, but you can call me
          <span
            class="_strong_57bb28"
          >
             Jean
          </span>
        </h2>
      </div>
      <div
        class="_aboutMeWrapper_921ed1"
      >
        <div>
          <div
            class="_aboutMeSubSection_921ed1"
          >
            <p>
              <b>
                Software Engineer
              </b>
              , 
              <b>
                Leader
              </b>
              , 
              <b>
                Student
              </b>
              , 
              <b>
                Teacher
              </b>
               are some adjectives that can be used to describe me. At the end of the day however, I am a simple tech nerd  
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-glasses fa-1x"
                data-icon="glasses"
                data-prefix="fas"
                role="img"
                viewBox="0 0 576 512"
              >
                <path
                  d="M143.3 96c-14 0-26.5 9.2-30.6 22.6L70.4 256 224 256c17.7 0 32 14.3 32 32l64 0c0-17.7 14.3-32 32-32l153.6 0-42.3-137.4C459.2 105.2 446.8 96 432.7 96L400 96c-17.7 0-32-14.3-32-32s14.3-32 32-32l32.7 0c42.1 0 79.4 27.5 91.8 67.8l45.4 147.5c4.1 13.2 6.1 26.9 6.1 40.7l0 96c0 53-43 96-96 96l-64 0c-53 0-96-43-96-96l0-32-64 0 0 32c0 53-43 96-96 96l-64 0c-53 0-96-43-96-96l0-96c0-13.8 2.1-27.5 6.1-40.7L51.5 99.8C63.9 59.5 101.1 32 143.3 32L176 32c17.7 0 32 14.3 32 32s-14.3 32-32 32l-32.7 0zM64 320l0 64c0 17.7 14.3 32 32 32l64 0c17.7 0 32-14.3 32-32l0-64-128 0zm416 96c17.7 0 32-14.3 32-32l0-64-128 0 0 64c0 17.7 14.3 32 32 32l64 0z"
                  fill="currentColor"
                />
              </svg>
                that enjoys programming, learning new technologies, experimenting with tech and teaching others all I know!
            </p>
          </div>
          <div
            class="_aboutMeSubSection_921ed1"
          >
            <div
              class="_container_57bb28"
              style="font-size: 18px;"
            >
              <h2
                class="_header_57bb28 _level2_57bb28"
              >
                Hobbies & Interests
              </h2>
            </div>
            <p>
              Of course, I have many other 
              <b>
                hobbies
              </b>
               and 
              <b>
                interests
              </b>
              . Most notably though I'm really into
            </p>
            <div
              class="_aboutMeHobbiesSection_921ed1"
            >
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-car fa-lg"
                  data-icon="car"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M135.2 117.4l-26.1 74.6 293.8 0-26.1-74.6C372.3 104.6 360.2 96 346.6 96L165.4 96c-13.6 0-25.7 8.6-30.2 21.4zM39.6 196.8L74.8 96.3C88.3 57.8 124.6 32 165.4 32l181.2 0c40.8 0 77.1 25.8 90.6 64.3l35.2 100.5c23.2 9.6 39.6 32.5 39.6 59.2l0 192c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32l0-32-320 0 0 32c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32L0 256c0-26.7 16.4-49.6 39.6-59.2zM128 304a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zm288 32a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"
                    fill="currentColor"
                  />
                </svg>
                Cars
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-martini-glass-citrus fa-lg"
                  data-icon="martini-glass-citrus"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 640 512"
                >
                  <path
                    d="M576 80c0-44.2-35.8-80-80-80-18 0-34.6 6-48 16l-81 0c23.6-47.4 72.5-80 129-80 79.5 0 144 64.5 144 144S575.5 224 496 224c-6.5 0-13-.4-19.3-1.3l64-74.7c1.1-1.3 2.2-2.7 3.3-4.1 19.4-14.6 32-37.8 32-64zM66.9 82.6C72.2 71.3 83.5 64 96 64l384 0c12.5 0 23.8 7.3 29.1 18.6s3.4 24.7-4.8 34.2l-184.3 215 0 116.2 64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-192 0c-17.7 0-32-14.3-32-32s14.3-32 32-32l64 0 0-116.2-184.3-215c-8.1-9.5-10-22.8-4.8-34.2zM165.6 128L288 270.8 410.4 128 165.6 128z"
                    fill="currentColor"
                  />
                </svg>
                Lounges & Bars
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-code fa-lg"
                  data-icon="code"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M360.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm64.6 136.1c-12.5 12.5-12.5 32.8 0 45.3l73.4 73.4-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0zm-274.7 0c-12.5-12.5-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 150.6 182.6c12.5-12.5 12.5-32.8 0-45.3z"
                    fill="currentColor"
                  />
                </svg>
                Code
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-mug-saucer fa-lg"
                  data-icon="mug-saucer"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M64 64c0-17.7 14.3-32 32-32l352 0c70.7 0 128 57.3 128 128S518.7 288 448 288c0 53-43 96-96 96l-192 0c-53 0-96-43-96-96L64 64zm448 96c0-35.3-28.7-64-64-64l0 128c35.3 0 64-28.7 64-64zM64 448l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L64 512c-17.7 0-32-14.3-32-32s14.3-32 32-32z"
                    fill="currentColor"
                  />
                </svg>
                Cafes & Brunch
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-desktop fa-lg"
                  data-icon="desktop"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M64 32C28.7 32 0 60.7 0 96L0 352c0 35.3 28.7 64 64 64l144 0-16 48-72 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l272 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-72 0-16-48 144 0c35.3 0 64-28.7 64-64l0-256c0-35.3-28.7-64-64-64L64 32zM96 96l320 0c17.7 0 32 14.3 32 32l0 160c0 17.7-14.3 32-32 32L96 320c-17.7 0-32-14.3-32-32l0-160c0-17.7 14.3-32 32-32z"
                    fill="currentColor"
                  />
                </svg>
                Tech
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-gamepad fa-lg"
                  data-icon="gamepad"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 640 512"
                >
                  <path
                    d="M448 64c106 0 192 86 192 192S554 448 448 448l-256 0C86 448 0 362 0 256S86 64 192 64l256 0zM192 176c-13.3 0-24 10.7-24 24l0 32-32 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l32 0 0 32c0 13.3 10.7 24 24 24s24-10.7 24-24l0-32 32 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-32 0 0-32c0-13.3-10.7-24-24-24zm240 96a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm64-96a32 32 0 1 0 0 64 32 32 0 1 0 0-64z"
                    fill="currentColor"
                  />
                </svg>
                Video Games
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-person-hiking fa-lg"
                  data-icon="person-hiking"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M192-32a56 56 0 1 1 0 112 56 56 0 1 1 0-112zM128 173.6c0-34 27.6-61.6 61.6-61.6 20.3 0 39.7 8.1 54 22.4l48.2 48.2c6 6 14.1 9.4 22.6 9.4l37.5 0c5.8 0 11.3 1.6 16 4.3l0-76.3c0-13.3 10.7-24 24-24s24 10.7 24 24l0 400c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-268.3c-4.7 2.7-10.2 4.3-16 4.3l-37.5 0c-25.5 0-49.9-10.1-67.9-28.1l-6.6-6.6 0 109.2 34.5 29.6c17.7 15.2 29.3 36.2 32.6 59.3l12.6 88.1c2.5 17.5-9.7 33.7-27.2 36.2s-33.7-9.7-36.2-27.2l-12.6-88.1c-1.1-7.7-5-14.7-10.9-19.8l-71.4-61.2c-21.3-18.2-33.5-44.9-33.5-72.9l0-101zm-4.8 203.7c2.3 2.3 4.7 4.4 7.1 6.5l44.9 38.5c-3.6 8.4-8.5 16.3-14.4 23.4L88.6 532.5c-11.3 13.6-31.5 15.4-45.1 4.1s-15.4-31.5-4.1-45.1l72.3-86.7c2.6-3.1 4.5-6.6 5.8-10.4l5.7-17.1zM0 160c0-35.3 28.7-64 64-64 17.7 0 32 14.3 32 32l0 128c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32l0-96z"
                    fill="currentColor"
                  />
                </svg>
                Hiking
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-plane fa-lg"
                  data-icon="plane"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M520 200c30.9 0 56 25.1 56 56s-25.1 56-56 56l-127.3 0-159.2 173.6c-6.1 6.6-14.6 10.4-23.6 10.4l-43.7 0c-10.9 0-18.6-10.7-15.2-21.1l54.3-162.9-99.7 0-52.8 66c-3 3.8-7.6 6-12.5 6l-19.8 0c-10.4 0-18-9.8-15.5-19.9L32 256 5 147.9C2.4 137.8 10.1 128 20.5 128l19.8 0c4.9 0 9.5 2.2 12.5 6l52.8 66 99.7 0-54.3-162.9C147.6 26.7 155.3 16 166.2 16l43.7 0c9 0 17.5 3.8 23.6 10.4L392.7 200 520 200z"
                    fill="currentColor"
                  />
                </svg>
                Travel
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-utensils fa-lg"
                  data-icon="utensils"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M63.9 14.4C63.1 6.2 56.2 0 48 0s-15.1 6.2-16 14.3L17.9 149.7c-1.3 6-1.9 12.1-1.9 18.2 0 45.9 35.1 83.6 80 87.7L96 480c0 17.7 14.3 32 32 32s32-14.3 32-32l0-224.4c44.9-4.1 80-41.8 80-87.7 0-6.1-.6-12.2-1.9-18.2L223.9 14.3C223.1 6.2 216.2 0 208 0s-15.1 6.2-15.9 14.4L178.5 149.9c-.6 5.7-5.4 10.1-11.1 10.1-5.8 0-10.6-4.4-11.2-10.2L143.9 14.6C143.2 6.3 136.3 0 128 0s-15.2 6.3-15.9 14.6L99.8 149.8c-.5 5.8-5.4 10.2-11.2 10.2-5.8 0-10.6-4.4-11.1-10.1L63.9 14.4zM448 0C432 0 320 32 320 176l0 112c0 35.3 28.7 64 64 64l32 0 0 128c0 17.7 14.3 32 32 32s32-14.3 32-32l0-448c0-17.7-14.3-32-32-32z"
                    fill="currentColor"
                  />
                </svg>
                Eating Out
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              aria-live="polite"
              class="image-gallery"
            >
              <div
                class="image-gallery-content  image-gallery-thumbnails-bottom"
              >
                <div
                  class="image-gallery-slide-wrapper  image-gallery-thumbnails-bottom"
                >
                  <div
                    class="image-gallery-slides"
                  >
                    <div
                      class="image-gallery-slides-container"
                      style="transform: translate3d(0%, 0, 0); -webkit-transform: translate3d(0%, 0, 0); transition: none;"
                    >
                      <div
                        aria-label="Go to Slide 1"
                        class="image-gallery-slide image-gallery-center  _carouselImages_921ed1"
                        role="button"
                        tabindex="-1"
                      >
                        <img
                          alt="Jean Hiking next a mountain that with craters forming a smiling face"
                          class="image-gallery-image"
                          src="/src/assets/images/jean/carousel/hiking.jpg"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="image-gallery-bullets"
                  >
                    <div
                      aria-label="Bullet Navigation"
                      class="image-gallery-bullets-container"
                      role="navigation"
                    >
                      <div
                        class="image-gallery-bullets-inner"
                      >
                        <button
                          aria-label="Go to Slide 1"
                          aria-pressed="true"
                          class="image-gallery-bullet active"
                          type="button"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="_aboutMeSubSection_921ed1"
      >
        <div
          class="_container_57bb28"
          style="font-size: 18px;"
        >
          <h2
            class="_header_57bb28 _level2_57bb28"
          >
            Interested in my professional experience?
          </h2>
        </div>
        <div
          class="_aboutMeProfessional_921ed1 _separator_921ed1"
        >
          <div>
            <div
              class="badge-base LI-profile-badge"
              data-locale="en_US"
              data-size="medium"
              data-theme="dark"
              data-type="HORIZONTAL"
              data-vanity="jlurena"
              data-version="v1"
            >
              <iframe />
            </div>
          </div>
          <div>
            <button
              class=" _btn_9c2c4d"
              type="button"
            >
              View Resume
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AboutMe > matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="_wrapper_921ed1"
  >
    <div
      class="_container_57bb28"
      style="font-size: 1.5rem;"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-user _icon_57bb28 fa-lg"
        data-icon="user"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M224 248a120 120 0 1 0 0-240 120 120 0 1 0 0 240zm-29.7 56C95.8 304 16 383.8 16 482.3 16 498.7 29.3 512 45.7 512l356.6 0c16.4 0 29.7-13.3 29.7-29.7 0-98.5-79.8-178.3-178.3-178.3l-59.4 0z"
          fill="currentColor"
        />
      </svg>
      <h1
        class="_header_57bb28 _level1_57bb28"
      >
        About
        <span
          class="_strong_57bb28"
        >
           Me
        </span>
      </h1>
    </div>
    <div
      class="_container_921ed1"
    >
      <div
        class="_container_57bb28"
        style="font-size: 18px;"
      >
        <h2
          class="_header_57bb28 _level2_57bb28"
        >
          Hey! Nice to meet you, I'm Jean Luis, but you can call me
          <span
            class="_strong_57bb28"
          >
             Jean
          </span>
        </h2>
      </div>
      <div
        class="_aboutMeWrapper_921ed1"
      >
        <div>
          <div
            class="_aboutMeSubSection_921ed1"
          >
            <p>
              <b>
                Software Engineer
              </b>
              , 
              <b>
                Leader
              </b>
              , 
              <b>
                Student
              </b>
              , 
              <b>
                Teacher
              </b>
               are some adjectives that can be used to describe me. At the end of the day however, I am a simple tech nerd  
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-glasses fa-1x"
                data-icon="glasses"
                data-prefix="fas"
                role="img"
                viewBox="0 0 576 512"
              >
                <path
                  d="M143.3 96c-14 0-26.5 9.2-30.6 22.6L70.4 256 224 256c17.7 0 32 14.3 32 32l64 0c0-17.7 14.3-32 32-32l153.6 0-42.3-137.4C459.2 105.2 446.8 96 432.7 96L400 96c-17.7 0-32-14.3-32-32s14.3-32 32-32l32.7 0c42.1 0 79.4 27.5 91.8 67.8l45.4 147.5c4.1 13.2 6.1 26.9 6.1 40.7l0 96c0 53-43 96-96 96l-64 0c-53 0-96-43-96-96l0-32-64 0 0 32c0 53-43 96-96 96l-64 0c-53 0-96-43-96-96l0-96c0-13.8 2.1-27.5 6.1-40.7L51.5 99.8C63.9 59.5 101.1 32 143.3 32L176 32c17.7 0 32 14.3 32 32s-14.3 32-32 32l-32.7 0zM64 320l0 64c0 17.7 14.3 32 32 32l64 0c17.7 0 32-14.3 32-32l0-64-128 0zm416 96c17.7 0 32-14.3 32-32l0-64-128 0 0 64c0 17.7 14.3 32 32 32l64 0z"
                  fill="currentColor"
                />
              </svg>
                that enjoys programming, learning new technologies, experimenting with tech and teaching others all I know!
            </p>
          </div>
          <div
            class="_aboutMeSubSection_921ed1"
          >
            <div
              class="_container_57bb28"
              style="font-size: 18px;"
            >
              <h2
                class="_header_57bb28 _level2_57bb28"
              >
                Hobbies & Interests
              </h2>
            </div>
            <p>
              Of course, I have many other 
              <b>
                hobbies
              </b>
               and 
              <b>
                interests
              </b>
              . Most notably though I'm really into
            </p>
            <div
              class="_aboutMeHobbiesSection_921ed1"
            >
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-car fa-lg"
                  data-icon="car"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M135.2 117.4l-26.1 74.6 293.8 0-26.1-74.6C372.3 104.6 360.2 96 346.6 96L165.4 96c-13.6 0-25.7 8.6-30.2 21.4zM39.6 196.8L74.8 96.3C88.3 57.8 124.6 32 165.4 32l181.2 0c40.8 0 77.1 25.8 90.6 64.3l35.2 100.5c23.2 9.6 39.6 32.5 39.6 59.2l0 192c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32l0-32-320 0 0 32c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32L0 256c0-26.7 16.4-49.6 39.6-59.2zM128 304a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zm288 32a32 32 0 1 0 0-64 32 32 0 1 0 0 64z"
                    fill="currentColor"
                  />
                </svg>
                Cars
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-martini-glass-citrus fa-lg"
                  data-icon="martini-glass-citrus"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 640 512"
                >
                  <path
                    d="M576 80c0-44.2-35.8-80-80-80-18 0-34.6 6-48 16l-81 0c23.6-47.4 72.5-80 129-80 79.5 0 144 64.5 144 144S575.5 224 496 224c-6.5 0-13-.4-19.3-1.3l64-74.7c1.1-1.3 2.2-2.7 3.3-4.1 19.4-14.6 32-37.8 32-64zM66.9 82.6C72.2 71.3 83.5 64 96 64l384 0c12.5 0 23.8 7.3 29.1 18.6s3.4 24.7-4.8 34.2l-184.3 215 0 116.2 64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-192 0c-17.7 0-32-14.3-32-32s14.3-32 32-32l64 0 0-116.2-184.3-215c-8.1-9.5-10-22.8-4.8-34.2zM165.6 128L288 270.8 410.4 128 165.6 128z"
                    fill="currentColor"
                  />
                </svg>
                Lounges & Bars
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-code fa-lg"
                  data-icon="code"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M360.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm64.6 136.1c-12.5 12.5-12.5 32.8 0 45.3l73.4 73.4-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0zm-274.7 0c-12.5-12.5-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 150.6 182.6c12.5-12.5 12.5-32.8 0-45.3z"
                    fill="currentColor"
                  />
                </svg>
                Code
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-mug-saucer fa-lg"
                  data-icon="mug-saucer"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M64 64c0-17.7 14.3-32 32-32l352 0c70.7 0 128 57.3 128 128S518.7 288 448 288c0 53-43 96-96 96l-192 0c-53 0-96-43-96-96L64 64zm448 96c0-35.3-28.7-64-64-64l0 128c35.3 0 64-28.7 64-64zM64 448l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L64 512c-17.7 0-32-14.3-32-32s14.3-32 32-32z"
                    fill="currentColor"
                  />
                </svg>
                Cafes & Brunch
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-desktop fa-lg"
                  data-icon="desktop"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M64 32C28.7 32 0 60.7 0 96L0 352c0 35.3 28.7 64 64 64l144 0-16 48-72 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l272 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-72 0-16-48 144 0c35.3 0 64-28.7 64-64l0-256c0-35.3-28.7-64-64-64L64 32zM96 96l320 0c17.7 0 32 14.3 32 32l0 160c0 17.7-14.3 32-32 32L96 320c-17.7 0-32-14.3-32-32l0-160c0-17.7 14.3-32 32-32z"
                    fill="currentColor"
                  />
                </svg>
                Tech
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-gamepad fa-lg"
                  data-icon="gamepad"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 640 512"
                >
                  <path
                    d="M448 64c106 0 192 86 192 192S554 448 448 448l-256 0C86 448 0 362 0 256S86 64 192 64l256 0zM192 176c-13.3 0-24 10.7-24 24l0 32-32 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l32 0 0 32c0 13.3 10.7 24 24 24s24-10.7 24-24l0-32 32 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-32 0 0-32c0-13.3-10.7-24-24-24zm240 96a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm64-96a32 32 0 1 0 0 64 32 32 0 1 0 0-64z"
                    fill="currentColor"
                  />
                </svg>
                Video Games
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-person-hiking fa-lg"
                  data-icon="person-hiking"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 448 512"
                >
                  <path
                    d="M192-32a56 56 0 1 1 0 112 56 56 0 1 1 0-112zM128 173.6c0-34 27.6-61.6 61.6-61.6 20.3 0 39.7 8.1 54 22.4l48.2 48.2c6 6 14.1 9.4 22.6 9.4l37.5 0c5.8 0 11.3 1.6 16 4.3l0-76.3c0-13.3 10.7-24 24-24s24 10.7 24 24l0 400c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-268.3c-4.7 2.7-10.2 4.3-16 4.3l-37.5 0c-25.5 0-49.9-10.1-67.9-28.1l-6.6-6.6 0 109.2 34.5 29.6c17.7 15.2 29.3 36.2 32.6 59.3l12.6 88.1c2.5 17.5-9.7 33.7-27.2 36.2s-33.7-9.7-36.2-27.2l-12.6-88.1c-1.1-7.7-5-14.7-10.9-19.8l-71.4-61.2c-21.3-18.2-33.5-44.9-33.5-72.9l0-101zm-4.8 203.7c2.3 2.3 4.7 4.4 7.1 6.5l44.9 38.5c-3.6 8.4-8.5 16.3-14.4 23.4L88.6 532.5c-11.3 13.6-31.5 15.4-45.1 4.1s-15.4-31.5-4.1-45.1l72.3-86.7c2.6-3.1 4.5-6.6 5.8-10.4l5.7-17.1zM0 160c0-35.3 28.7-64 64-64 17.7 0 32 14.3 32 32l0 128c0 17.7-14.3 32-32 32l-32 0c-17.7 0-32-14.3-32-32l0-96z"
                    fill="currentColor"
                  />
                </svg>
                Hiking
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-plane fa-lg"
                  data-icon="plane"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 576 512"
                >
                  <path
                    d="M520 200c30.9 0 56 25.1 56 56s-25.1 56-56 56l-127.3 0-159.2 173.6c-6.1 6.6-14.6 10.4-23.6 10.4l-43.7 0c-10.9 0-18.6-10.7-15.2-21.1l54.3-162.9-99.7 0-52.8 66c-3 3.8-7.6 6-12.5 6l-19.8 0c-10.4 0-18-9.8-15.5-19.9L32 256 5 147.9C2.4 137.8 10.1 128 20.5 128l19.8 0c4.9 0 9.5 2.2 12.5 6l52.8 66 99.7 0-54.3-162.9C147.6 26.7 155.3 16 166.2 16l43.7 0c9 0 17.5 3.8 23.6 10.4L392.7 200 520 200z"
                    fill="currentColor"
                  />
                </svg>
                Travel
              </div>
              <div
                class="_hobby_921ed1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-utensils fa-lg"
                  data-icon="utensils"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M63.9 14.4C63.1 6.2 56.2 0 48 0s-15.1 6.2-16 14.3L17.9 149.7c-1.3 6-1.9 12.1-1.9 18.2 0 45.9 35.1 83.6 80 87.7L96 480c0 17.7 14.3 32 32 32s32-14.3 32-32l0-224.4c44.9-4.1 80-41.8 80-87.7 0-6.1-.6-12.2-1.9-18.2L223.9 14.3C223.1 6.2 216.2 0 208 0s-15.1 6.2-15.9 14.4L178.5 149.9c-.6 5.7-5.4 10.1-11.1 10.1-5.8 0-10.6-4.4-11.2-10.2L143.9 14.6C143.2 6.3 136.3 0 128 0s-15.2 6.3-15.9 14.6L99.8 149.8c-.5 5.8-5.4 10.2-11.2 10.2-5.8 0-10.6-4.4-11.1-10.1L63.9 14.4zM448 0C432 0 320 32 320 176l0 112c0 35.3 28.7 64 64 64l32 0 0 128c0 17.7 14.3 32 32 32s32-14.3 32-32l0-448c0-17.7-14.3-32-32-32z"
                    fill="currentColor"
                  />
                </svg>
                Eating Out
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              aria-live="polite"
              class="image-gallery"
            >
              <div
                class="image-gallery-content  image-gallery-thumbnails-bottom"
              >
                <div
                  class="image-gallery-slide-wrapper  image-gallery-thumbnails-bottom"
                >
                  <div
                    class="image-gallery-slides"
                  >
                    <div
                      class="image-gallery-slides-container"
                      style="transform: translate3d(0%, 0, 0); -webkit-transform: translate3d(0%, 0, 0); transition: none;"
                    >
                      <div
                        aria-label="Go to Slide 1"
                        class="image-gallery-slide image-gallery-center  _carouselImages_921ed1"
                        role="button"
                        tabindex="-1"
                      >
                        <img
                          alt="Jean Hiking next a mountain that with craters forming a smiling face"
                          class="image-gallery-image"
                          src="/src/assets/images/jean/carousel/hiking.jpg"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="image-gallery-bullets"
                  >
                    <div
                      aria-label="Bullet Navigation"
                      class="image-gallery-bullets-container"
                      role="navigation"
                    >
                      <div
                        class="image-gallery-bullets-inner"
                      >
                        <button
                          aria-label="Go to Slide 1"
                          aria-pressed="true"
                          class="image-gallery-bullet active"
                          type="button"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="_aboutMeSubSection_921ed1"
      >
        <div
          class="_container_57bb28"
          style="font-size: 18px;"
        >
          <h2
            class="_header_57bb28 _level2_57bb28"
          >
            Interested in my professional experience?
          </h2>
        </div>
        <div
          class="_aboutMeProfessional_921ed1 _separator_921ed1"
        >
          <div>
            <div
              class="badge-base LI-profile-badge"
              data-locale="en_US"
              data-size="medium"
              data-theme="dark"
              data-type="HORIZONTAL"
              data-vanity="jlurena"
              data-version="v1"
            />
          </div>
          <div>
            <button
              class=" _btn_9c2c4d"
              type="button"
            >
              View Resume
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
